# softapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
docs/: DEPLOYMENT_GUIDE.md  PUBLISHING.md  QUICKSTART.md
myapp/: .env.example  README.md  requirements.txt
myapp/app/: config.py  db.py  main.py  security.py
myapp/app/api/: routes_auth.py  routes_health.py  routes_items.py
myapp/app/models/: item.py
myapp/app/schemas/: item.py
softapi/: __init__.py  cli.py
softapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
softapi/routers/: health.py
softapi/scaffold/: fastapi_basic.py
